pengajuan izin api imperfect
